newgoapp-deployment.v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: newgoapp
  name: newgoapp-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newgoapp
  strategy: {}
  template:
    metadata:
      name: newgoapp-v2
      labels:
        version: v2
        app: newgoapp
    spec:
      containers:
      - image: asrafbd/newgoapp:v2.0
        name: newgoapp
        ports:
        - containerPort: 8080
