newgoapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: newgoapp
  name: newgoapp-v1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: newgoapp
  type: LoadBalancer
